--- a/Smartr/Gemfile
+++ b/Smartr/Gemfile
@@ -1,6 +1,9 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
+gem "rack", ">= 2.0.6"
+gem "loofah", ">= 2.2.3"
+
 ruby '2.3.3'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
